--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "serve": "vite",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.0.28",
     "v-drag": "^3.0.8",
     "vue": "^3.2.41",
     "vue-cropperjs": "^5.0.0",
